# python-pipelines-project

./: .gitignore  README.md
examples/flask-gunicorn-run/: Dockerfile  README.md  app.py  pyproject.toml
examples/flask-singlethread-run/: Dockerfile  README.md  app.py  pyproject.toml
examples/starlette-uvicorn-run/: Dockerfile  README.md  app.py  pyproject.toml
notebook/: skink-cryptoweather-notebook.ipynb
