[tool.poetry]
name = "flask-singlethread-run"
version = "0.1.0"
description = ""
authors = ["Dim L. Feiron <norefle@outlook.com>"]

[tool.poetry.dependencies]
python = "^3.7"
flask = "^1.1"

[tool.poetry.dev-dependencies]
pytest = "^4.4"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
