[tool.poetry]
name = "starlette-uvicorn-run"
version = "0.1.0"
description = ""
authors = ["Dim L. Feiron <norefle@outlook.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
starlette = "^0.12.8"
uvicorn = "^0.8.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
